✨ Adding V1 Api and Clients compilation & ♻️Some refactoring